# jemalloc

./: .gitignore  CMakeLists.txt
include/jemalloc/: gen_headers.ps1  gen_headers_cmake.txt  gen_mangle.ps1  jemalloc_defs.h.in.windows.cmake
include/jemalloc/internal/: jemalloc_internal_decls.h  jemalloc_internal_defs.h.in.windows.cmake
include/msvc_compat/: warnings_disabled.h  windows_extra.h
src/: CMakeLists.txt  jemalloc.c  jemalloc_cpp.cpp  nstime.c  prof.c
test/: CMakeLists.txt  runtests_windows.cmd
test/unit/: prof_accum.c  prof_gdump.c  prof_idump.c  prof_reset.c
